[package]
name = "blukey"
version = "0.0.2-rc0"
edition = "2021"
authors = ["shashankx86 <shashankspis20@gmail.com>"]
description = "A Linux daemon for creating custom keyboard shortcuts that can execute shell commands."
readme = "README.md"
repository = "https://github.com/shashankx86/blukey"
homepage = "https://github.com/shashankx86/blukey"
license = "MIT"

[dependencies]
evdev = "0.12"
daemonize = "0.5"
clap = { version = "4.4", features = ["derive"] }
nix = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
cross = "0.2.5"
termios = "0.3.3"